--- a/restaurant1.html
+++ b/restaurant1.html
@@ -6,7 +6,7 @@
     <title>Projet2</title>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href="Projet3soutenance/css/styles.css" type="text/css" rel="stylesheet">
+    <link href="/css/styles.css" type="text/css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3a02fa1fa2.js" crossorigin="anonymous"></script>
   </head>
   <body>
