--- a/restaurant4.html
+++ b/restaurant4.html
@@ -20,7 +20,7 @@
         <img alt="logoohmyfood" height="35" src="images/logo/ohmyfood.png" class="logo_icone">
       </div>
     </header>
-    <section>
+    <section class="sectionrestaurant">
       <div class="imagebackground4"></div>
       <div class="menu_restaurant">
         <div class="intro_restau">
