--- a/restaurant1.html
+++ b/restaurant1.html
@@ -17,7 +17,7 @@
             <span class="fa-solid fa-arrow-left-long fleche "></span>
           </a>
         </span>
-        <img alt="logoohmyfood" height="35" src="/images/logo/ohmyfood.png" class="logo_icone">
+        <img alt="logoohmyfood" height="35" src="images/logo/ohmyfood.png" class="logo_icone">
       </div>
     </header>
     <section class="sectionrestaurant">
